<resources>
    <string name="app_name">Daftar-teman</string>
    <string name="login_area">Login Area</string>
    <string name="dark_app">Daftar teman</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar">Daftar</string>
</resources>