<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4D2D2"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/googleg_standard_color_18" />

    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_image"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/login_area"
        android:textColor="#220505"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_login"
        android:gravity="center"
        android:text="@string/dark_app"
        android:textColor="#27010D"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_title"
        android:layout_margin="10dp"
        android:background="#863D51"
        android:padding="16dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#8A2525" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#8A2525" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="10dp"
            android:background="#02071F"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white" />
        <ImageView
            android:id="@+id/btn_google"
            android:layout_below="@id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/fui_ic_googleg_color_24dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/btn_google"
            android:layout_marginTop="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/forgot_password"
                android:textStyle="italic" />

                  </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/title_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/belum_punya_akun"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/title_footer"
            android:text="@string/daftar"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>